[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/font/m5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/sprites/checkbox_off_normal.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/checkbox_on_normal.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/checkbox_focus.png" type="Texture" id=4]
[ext_resource path="res://objects/ui/CheckBox.gd" type="Script" id=5]

[sub_resource type="ImageTexture" id=1]

[sub_resource type="ImageTexture" id=2]

[sub_resource type="ImageTexture" id=3]

[sub_resource type="ImageTexture" id=4]

[sub_resource type="StyleBoxTexture" id=5]
content_margin_left = 6.0
content_margin_right = 0.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 32, 32 )
margin_left = 2.05619
margin_right = 2.05619
margin_top = 2.0281
margin_bottom = 2.0562

[sub_resource type="StyleBoxTexture" id=6]
content_margin_left = 6.0
content_margin_right = 0.0
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 32, 32 )
margin_left = 2.05619
margin_right = 2.05619
margin_top = 2.0281
margin_bottom = 2.0562

[sub_resource type="StyleBoxTexture" id=7]
content_margin_left = 6.0
content_margin_right = 0.0
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 32, 32 )
margin_left = 2.05619
margin_right = 2.05619
margin_top = 2.0281
margin_bottom = 2.0562

[sub_resource type="DynamicFont" id=8]
size = 32
extra_spacing_top = -3
font_data = ExtResource( 1 )

[node name="CheckBox" type="CheckBox"]
margin_right = 48.0
margin_bottom = 26.0
rect_min_size = Vector2( 48, 26 )
custom_icons/radio_checked = SubResource( 1 )
custom_icons/checked = SubResource( 2 )
custom_icons/radio_unchecked = SubResource( 3 )
custom_icons/unchecked = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/hover_pressed = SubResource( 6 )
custom_styles/normal = SubResource( 5 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 8 )
text = "OFF"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="focus_entered" from="." to="." method="_on_CheckBox_focus_entered"]
[connection signal="pressed" from="." to="." method="_on_CheckBox_pressed"]
[connection signal="toggled" from="." to="." method="_on_CheckBox_toggled"]
